--- a/cssflex.html
+++ b/cssflex.html
@@ -36,7 +36,13 @@
             line-height: 20px;
             height: 20px;
             font-size: 20px;
+            font-family: monospace;
+            display: flex;
+            flex-wrap: wrap
+        }
 
+        .flex-container > div.menu :hover {
+            background-color: lightgray;
         }
 
         .hero-container  {
@@ -106,16 +112,11 @@
     <div class="flex-container">
         <div id="logo" style="flex-grow: 1"><img src="http://picsum.photos/id/1012/100/25.jpg"></div>
         <div class="menu" style="flex-grow: 2"></div>
-        <div class="menu"  style="flex-grow: 1">Features</div>
-        <div class="menu"  style="flex-grow: 1">Prices</div>
-        <div class="menu"  style="flex-grow: 1">Resources</div>
-        <div class="menu"  style="flex-grow: 1">Enterprise</div>
-        <div class="menu"  style="flex-grow: 1">Blog</div>
-        <!-- <div>4</div>
-        <div>5</div>
-        <div>6</div>
-        <div>7</div>
-        <div>8</div> -->
+        <div class="menu"  style="flex-grow: 1"><a href="#">Features</a></div>
+        <div class="menu"  style="flex-grow: 1"><a href="#">Prices</a></div>
+        <div class="menu"  style="flex-grow: 1"><a href="#">Resources</a></div>
+        <div class="menu"  style="flex-grow: 1"><a href="#">Enterprise</a></div>
+        <div class="menu"  style="flex-grow: 1"><a href="#">Blog</a></div>
     </div>
 
     <div class="hero-container">
